SpringBoot: AWS DBMS 주소연결

--- a/SpringBoot/spring_project1/src/main/resources/application.properties
+++ b/SpringBoot/spring_project1/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=spring_project1
 
 ## 스프링부트 자체의 mysql 드라이버를 노트북의 mysql과 연결해주는 역할
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/backend_spring_project?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://spring-project.cd6i2ceiu080.ap-northeast-2.rds.amazonaws.com:3306/backend_spring_project?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
 
 ## jdbc:mysql:// 다 mysql쓸때는 거의 비슷하게 쓰고, 3306은 데이터베이스를 의미
 ##localhost:8080 => 일반적으로 본인컴퓨터의 개인웹서버
