SpringBoot: AWS 설정

--- a/SpringBoot/spring_project1/src/main/resources/application.properties
+++ b/SpringBoot/spring_project1/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:mysql://spring-project.cd6i2ceiu080.ap-northeast-2.rd
 ##localhost:8080 => 일반적으로 본인컴퓨터의 개인웹서버
 ##localhost:3306 => 일반적으로 본인컴퓨터의 개인데이터베이스서버
 spring.datasource.username=root
-spring.datasource.password=0000
+spring.datasource.password=aws032703
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
