SpringBoot: build.gradle 수정

--- a/SpringBoot/spring_project1/build.gradle
+++ b/SpringBoot/spring_project1/build.gradle
@@ -2,7 +2,9 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.10'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'war'
 }
+apply plugin: 'war'
 
 group = 'com.canesblack'
 version = '0.0.1-SNAPSHOT'
@@ -34,12 +36,6 @@ dependencies {
 	
 	// MySQL Connector
 	runtimeOnly 'com.mysql:mysql-connector-j'
-	
-	// 테스트 관련 의존성
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
-	testImplementation 'org.springframework.security:spring-security-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
